--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -23,9 +23,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/HRManager">HR Manager</a>
                         </li>
                     </ul>
+                </div>
+                <div class="mr-2">
+                    <partial  name="_loginStatus" />
                 </div>
             </div>
         </nav>
